# game-engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
docs/: components.md  entity_component_system.md
editor/: CMakeLists.txt
editor/editor/: editor.hpp  main.cpp
editor/include/editor/: editor.hpp  editor_setup.hpp
editor/src/: editor.cpp  editor_setup.cpp  main.cpp
engine/: CMakeLists.txt
engine/engine/: array_view.hpp  engine.cpp  engine.hpp  id_types.hpp  launch.hpp  update_priorities.hpp
engine/engine/components/: transform_c.cpp  transform_c.hpp
engine/engine/core/: clock.cpp  clock.hpp  component.hpp  component_entity.cpp  component_entity.hpp  component_group.hpp  component_registry.cpp  component_registry.hpp  component_store.hpp  component_types.hpp  ecs.cpp  ecs.hpp  entity.hpp  game_entity.cpp  game_entity.hpp  game_loop.cpp  game_loop.hpp  profiler.cpp  profiler.hpp  system.cpp  system.hpp  system_entity.hpp  update_system.cpp  update_system.hpp  uuid.cpp  uuid.hpp
engine/engine/ecs/: component_group.hpp  component_grouping.hpp  component_store.hpp  component_traits.hpp  component_types.hpp  ecs.cpp  ecs.hpp  entity_builder.hpp  entity_store.cpp  entity_store.hpp  handle_types.hpp
engine/engine/glfw/: glfw.cpp  glfw.hpp
engine/engine/input_system/: action_map.cpp  action_map.hpp  input_system.cpp  input_system.hpp  input_types.hpp
engine/engine/physics_system/: physics_system.cpp  physics_system.hpp
engine/engine/render_system/: camera.cpp  camera_manager.cpp  camera_manager.hpp  frustum.cpp  frustum.hpp  render_system.cpp  render_system.hpp  shader.cpp  shader_program.cpp  vertex_formats.hpp
engine/engine/window_manager/: window.cpp  window.hpp
engine/include/engine/: array_view.hpp  engine.hpp  launch.hpp  update_priorities.hpp
engine/include/engine/components/: transform_c.hpp  transform_component.hpp
engine/include/engine/core/: clock.hpp  component.hpp  component_entity.hpp  component_registry.hpp  component_uuid.hpp  ecs.hpp  entity.hpp  entity_id.hpp  game_entity.hpp  game_loop.hpp  launch.hpp  system.hpp  system_entity.hpp  update_system.hpp  uuid.hpp
engine/include/engine/input_system/: action_map.hpp  input_system.hpp  input_types.hpp
engine/include/engine/physics_system/: physics_system.hpp
engine/include/engine/render_system/: camera.hpp  camera_manager.hpp  frustum.hpp  mesh.hpp  model.hpp  render_system.hpp  renderer.hpp  shader.hpp  shader_program.hpp
engine/include/engine/subsystems/: glfw.hpp  physics_system.hpp  update_priorities.hpp  window.hpp  window_manager.hpp
engine/include/engine/subsystems/render_system/: camera.hpp
engine/include/engine/window_manager/: window.hpp
engine/src/components/: transform_component.cpp
engine/src/core/: clock.cpp  component_entity.cpp  component_registry.cpp  component_uuid.cpp  ecs.cpp  game_entity.cpp  game_loop.cpp  system.cpp  update_system.cpp  uuid.cpp
engine/src/input_system/: input_system.cpp
engine/src/physics_system/: physics_system.cpp
engine/src/render_system/: camera.cpp  frustum.cpp  model.cpp  render_system.cpp  shader.cpp
engine/src/subsystems/: window.cpp
engine/src/subsystems/glfw/: glfw.cpp
engine/src/subsystems/physics_system/: physics_system.cpp
engine/src/subsystems/render_system/: camera.cpp
engine/src/subsystems/render_system/shaders/: shader_program.cpp
engine/src/subsystems/window_manager/: window_manager.cpp
engine/src/window_manager/: window.cpp
game/: CMakeLists.txt
game/game/: game.cpp  game.hpp
game/include/game/: game.hpp  game_setup.hpp
game/src/: game.cpp  game_setup.cpp
launcher/: CMakeLists.txt
launcher/include/launcher/: launcher.hpp  launcher_setup.hpp
launcher/launcher/: launcher.hpp  main.cpp
launcher/src/: launcher.cpp  launcher_setup.cpp  main.cpp
tests/: CMakeLists.txt
tests/engine/: CMakeLists.txt
tests/engine/core/: component_group_tests.cpp  component_store_tests.cpp  component_type_tests.cpp  component_uuid_tests.cpp  uuid_tests.cpp
tests/engine/ecs/: component_group_tests.cpp  component_grouping_tests.cpp  component_store_tests.cpp  component_types_tests.cpp  ecs_tests.cpp
