function(engine_test name)
    add_executable(${name})
    target_sources(${name} PRIVATE ${ARGN})
    target_link_libraries(${name} PRIVATE tests_main engine)
    add_test(NAME ${name} COMMAND ${name})
endfunction()

engine_test(uuid_tests "core/uuid_tests.cpp")
engine_test(component_type_tests "core/component_type_tests.cpp")
engine_test(component_store_tests "core/component_store_tests.cpp")
