function(engine_test name)
    add_executable(${name})
    target_sources(${name} PRIVATE ${ARGN})
    target_link_libraries(${name} PRIVATE tests_main engine)
    add_test(NAME ${name} COMMAND ${name})
endfunction()

engine_test(uuid_tests "core/uuid_tests.cpp")
engine_test(component_types_tests "ecs/component_types_tests.cpp")
engine_test(component_store_tests "ecs/component_store_tests.cpp")
engine_test(component_grouping_tests "ecs/component_grouping_tests.cpp")
engine_test(ecs_tests "ecs/ecs_tests.cpp")
